--- a/css/src/partials/grids/_tease_grids_susy.sass
+++ b/css/src/partials/grids/_tease_grids_susy.sass
@@ -33,12 +33,12 @@ body
   +box-align(stretch)
   width: 100%
   // min-width: 100%
-  padding-top: 10%
-  height: 90%
+  // padding-top: 10%
+  height: 100%
   // @extend .wireframe
   header
     // +display-box
-    display: block
+    // display: block
     // +box-flex
     // height: 200px
     // width: 10000px
